Opened 19 years ago

Closed 19 years ago

Last modified 19 years ago

#641 closed bug (fixed)

[Workspaces] moving window decorator fails to update Workspace's clone

Reported by: johndrinkwater Owned by: axeld
Priority: normal Milestone: R1
Component: Applications Version:
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

Move a window's titlebar, you'll see Workspaces doesn't update the location of it until the window is moved.

hrev17629

Change History (3)

comment:1 by axeld, 19 years ago

Resolution: fixed

comment:2 by axeld, 19 years ago

Fixed in hrev17636.

comment:3 by axeld, 19 years ago

Status: newclosed
Note: See TracTickets for help on using tickets.