The workspaces window is now updated when a tab is moved - this fixes bug #641.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@17636 a95241bf-73f2-0310-859d-f6bbb57e9c96